# imageprocess

./: .gitignore  CMakeLists.txt  contour-task-04-tool-00  dst.txt
Integral/: IntegralMain.cpp  integral_test.cpp
data/: 1010  1111  112304  120160  1212  128128  1438  149144  152152  160152  160154  160160  1616  1664  176168  180175  1918  1919  192192  2019  2020  2221  2322  240320  240320.txt  2424  28  2876  297287  3040  3040.txt  304304  320304  320307  320320  32128  3232  352336  360349  3836  (+61 more)
data/milkbox/: VI_contour280.yuv  VI_contour281.yuv  VI_contour282.yuv  VI_contour283.yuv  VI_contour284.yuv  VI_contour285.yuv  VI_contour286.yuv  VI_contour287.yuv  VI_contour288.yuv  VI_contour289.yuv  VI_contour290.yuv  VI_contour291.yuv  VI_contour292.yuv  VI_contour293.yuv  VI_contour294.yuv  VI_contour295.yuv  VI_contour296.yuv  VI_contour297.yuv  VI_contour298.yuv  VI_contour299.yuv  VI_contour300.yuv  VI_contour301.yuv  VI_contour302.yuv  VI_contour303.yuv  VI_contour304.yuv  VI_contour305.yuv  VI_contour306.yuv  VI_contour307.yuv  VI_contour308.yuv  VI_contour309.yuv  VI_contour310.yuv  VI_contour311.yuv  VI_contour312.yuv  VI_contour313.yuv  VI_contour314.yuv  VI_contour315.yuv  VI_contour316.yuv  VI_contour317.yuv  VI_contour318.yuv  VI_contour319.yuv  (+66 more)
images/: 1(1).txt  1.txt  1_YUV422.yuv  2(1).txt  2circless.yuv  2circless1.yuv  2circless2.yuv  ImPlayer.rar  RotateImage_orig.cpp  SearchArray_8U.yuv  VI_contour27.yuv  VI_contour848.yuv  black640480.yuv  chuankou.yuv  lanchuankou.yuv  pyramid0.txt  pyramid1.txt  pyramid2.txt  pyramid3.txt  pyramid4.txt  rainbow.yuv  rainbow640480.yuv  rgb.yuv  smallcircle.yuv  test18.yuv  test1_YUV420.yuv  test1_YUV422.yuv  test20.yuv  test64.yuv  test_YUV420.yuv  test_YUV422.yuv  test_YUV422Half.yuv  test_YUV422Sep.yuv  vert.yuv  vert_tpl.yuv  yuv420sp.yuv  zhaoxi.net_.yuv
images/cpus/: image_yuv_0.yuv  image_yuv_135.yuv  image_yuv_179.yuv  image_yuv_45.yuv  image_yuv_90.yuv
images/testfile/: VI2.yuv  VI3.yuv  VI41.yuv  VI42  (+6 more)
include/: GeoMatch.h  HuMatch.h  TemplateMatch.h  WeightedQuickUnionWithPC.h  common.h  hi_comm_ive.h  types.h
src/: FeaturesMatch.cpp  GeoMatch.cpp  GeoMatchTest.cpp  GetUnions.cpp  Hu.cpp  HuFastMatchRegion.cpp  IMatImpl.cpp  KOYOMain.cpp  RotateImage.cpp  TemplateMatch.cpp  TemplateMatchTest.cpp  boardMain.cpp  canny.cpp  fastLocalization.cpp  hu2.cpp  sample_ive_sobel_with_cached_mem.c  sobel.cpp  test.cpp
test/: create_template.cpp  create_template.h  getPoint.cpp  myFilter.cpp  read_y_from_yuv.cpp  rotateBitMap.cpp  simplelib.cpp  sobelTest.cpp  test.cpp  testMatch.cpp  testNewWidth.cpp  testPyDown.cpp  testTemplateMatch.cpp  testdll.cpp
utils/: HIAdapter.c  utils.cpp
(+79 files in other folders)
